--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,17 @@
+*{
+	margin: 0;
+	padding: 0;
+}
 html,body{
 	margin: 0;
 	padding: 0;
 	font-size: 62.5%;
 }
-a{
+.header a {
+	color: #fff;
+	text-decoration: none;
+}
+.main a{
 	text-decoration: none;
 	border: 0;
 	outline: none;
@@ -12,12 +20,12 @@ a{
 	float: right;
 	padding-right: 1.5rem;
 }
-.super-wide{
+.wide{
 	width: 100%;
 }
 .header{
-	z-index: 1;
 	position: fixed;
+	z-index: -1;
 	top: 0;
 	right: 0;
 	left: 0;
@@ -41,6 +49,7 @@ span{
 	display: block;
 	text-align: center;
 	font-size: 1.8rem;
+	color: #fff;
 }
 .main{
 	position: relative;
@@ -48,8 +57,6 @@ span{
 	background: #eff0f4;
 	font-size: 1.6rem;
 	color: #5fc0cd;
-	float: right;
-	padding-right: 1.5rem;
 }
 input,button{
 	text-decoration: none;
@@ -58,13 +65,13 @@ input,button{
 	margin: .8rem 0;
 	height: 5rem;
 	font-size: 3rem;
+	color: #fff;
 }
 b{
 	position: absolute;
 	margin: 1.3rem 0 0 1.4rem;
 	padding-right: 1.5rem;
 	border-right: .2rem #eaedee solid;
-	float: left;
 }
 .text{
 	text-indent: 6rem;
