--- a/css/style.css
+++ b/css/style.css
@@ -1,31 +1,19 @@
-*{
-	margin: 0;
-	padding: 0;
-}
 html,body{
 	margin: 0;
 	padding: 0;
 	font-size: 62.5%;
 }
-.header a {
-	color: #fff;
-	text-decoration: none;
-}
-.main a{
+a,button,input{
 	text-decoration: none;
 	border: 0;
 	outline: none;
-	font-size: 1.6rem;
-	color: #5fc0cd;
-	float: right;
-	padding-right: 1.5rem;
 }
 .wide{
 	width: 100%;
 }
 .header{
+	z-index: 1;
 	position: fixed;
-	z-index: -1;
 	top: 0;
 	right: 0;
 	left: 0;
@@ -34,14 +22,14 @@ html,body{
 	font-size: 1.6rem;
 	background: #5fc0cd;
 }
-.midlle{
+.middle{
 	color: white;
 }
 .left{
 	float: left;
 	padding-left: 1.5rem;
 }
-.right{
+.right,.main a{
 	float: right;
 	padding-right: 1.5rem;
 }
@@ -49,23 +37,20 @@ span{
 	display: block;
 	text-align: center;
 	font-size: 1.8rem;
-	color: #fff;
 }
 .main{
 	position: relative;
 	top: 4.4rem;
 	background: #eff0f4;
+}
+.main a{
 	font-size: 1.6rem;
 	color: #5fc0cd;
 }
 input,button{
-	text-decoration: none;
-	border: 0;
-	outline: none;
 	margin: .8rem 0;
 	height: 5rem;
 	font-size: 3rem;
-	color: #fff;
 }
 b{
 	position: absolute;
@@ -74,7 +59,7 @@ b{
 	border-right: .2rem #eaedee solid;
 }
 .text{
-	text-indent: 6rem;
+	text-indent: 6rem; 
 }
 .backgroundcolor{
 	background: #5fc0cd;
